--- a/styles/style.css
+++ b/styles/style.css
@@ -127,3 +127,38 @@ button {
 }
 
 
+/* ----------------------------------------------- */
+.services-container {
+    margin: 20px;
+    padding: 20px;
+    box-shadow: 2px 6px 16px rgba(78, 166, 242, 0.4);
+}
+
+.srvc-card {
+    display: flex;
+    flex-wrap: wrap;     /* Allows wrapping to next line */
+    gap: 30px;           /* Adjust space between cards */
+    justify-content: center;
+}
+
+.srvc-card > div {
+    width: 30%;          /* 3 cards per row */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    box-sizing: border-box;
+}
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+    .srvc-card > div {
+        width: 100%;  /* Stack cards vertically on small screens */
+    }
+}
